--- a/video-conference.html
+++ b/video-conference.html
@@ -135,7 +135,7 @@ background: gray;
              
          
         </div>
-		     <div id="popup1" class="overlay">
+		     <div id="popup1" class="overlay" style="display: none;">
 				<div class="popup">
 					<h2>Share Room</h2>
 					<a class="close" href="#">&times;</a>
