--- a/video-conference.html
+++ b/video-conference.html
@@ -115,7 +115,7 @@ background: gray;
            <div class='row'>    
                    <div class='col-md-2'>
 					<a href="#popup1">
-                       <img src='sh.png' style='width:40px'/>
+                       <img src='https://legendconf.herokuapp.com/sh.png' style='width:40px'/>
 					</a>
                    </div>  
                    <div class='col-md-8'>
