--- a/video-conference.html
+++ b/video-conference.html
@@ -21,7 +21,7 @@
         <meta name="description" content="Video Conferencing using WebRTC." />
         <meta name="keywords" content="WebRTC, Video Conferencing, Demo, Example, Experiment" />
 
-        <link rel="stylesheet" href="https://www.webrtc-experiment.com/style.css">
+        <link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="roomdailog.css">
         <link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css' rel="stylesheet"/>
       <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
@@ -89,7 +89,7 @@
         } 
       #clbk{
 
-background: gray;
+		background: gray;
 
       }
         </style>
@@ -111,22 +111,22 @@ background: gray;
 
     <body>
 
-       <div class='container' style='background-color:white;margin-bottom:10px'>
+       <div class='container' style='margin-bottom:10px'>
            <div class='row'>    
                    <div class='col-md-2'>
 					<a href="#popup1">
-                       <img src='https://legendconf.herokuapp.com/sh.png' style='width:40px'/>
+                       <img src='sh.png' style='width:40px'/>
 					</a>
                    </div>  
                    <div class='col-md-8'>
-                        <h3 id="title" style='text-align:center'></h3>
+                        <h3 id="title" style='text-align:center; font-size:30px; color:white;'></h3>
                   </div>
 				  <div id="divjoin" class='col-md-2'>
 						<table id="rooms-list"></table>
                    </div>  
                    <div class='col-md-12'>
-                          <div class='block' style='background-color:gray;width:500px;height:400px;margin:auto'>
-							<div id="videos-container"></div>
+                          <div class='block' style='background-color:white;width:550px;height:400px;margin:auto'>
+							<div id="videos-container" align="center"></div>
                            </div>
                    </div>   
 					
@@ -162,7 +162,7 @@ background: gray;
                     </span>
 
                     <input type="text" id="conference-name" placeholder="Conference Name" style="width: 50%; display: none;">
-                    <button id="setup-new-room" class="setup" style="display: none;">Setup New Conference</button>
+                    <button id="setup-new-room" class="setup" style="display: none;">Setup</button>
                 </section>
 
            
@@ -298,7 +298,7 @@ background: gray;
                             config.attachStream = stream;
 
                             var mediaElement = getMediaElement(video, {
-                                width: 500,
+                                width: 550,
                                 buttons: ['mute-audio', 'mute-video', 'full-screen', 'volume-slider']
                             });
                             mediaElement.toggle('mute-audio');
