--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body{
       </div>
       <div id='box2' class='hidden'>
           <div class='backArrow' style='margin-bottom:15px;cursor:pointer'>
-            <a onclick="showBox1();"><img src='ar.png' style='width:20px'/></a>
+            <a onclick="showBox1();"><img src='http://www.netlegends.in/ar.jpg' style='width:20px'/></a>
           </div>
           <div class="form-group">
           <input required="" class="form-control form-control-lg" id="lroomname" name="name" placeholder="Enter your name" type="text" value="">
@@ -35,7 +35,7 @@ body{
       </div>
       <div id='box3' class='hidden'>
       <div class='backArrow' style='margin-bottom:15px;cursor:pointer'>
-        <a onclick="showBox1();"><img src='ar.png' style='width:20px'/></a>
+        <a onclick="showBox1();"><img src='http://www.netlegends.in/ar.jpg' style='width:20px'/></a>
       </div>
       <form class=""><div class="form-group">
         <input style="display: none;" required="" class="form-control form-control-lg" placeholder="Enter your name" type="text" value="">
