--- a/video-conference.html
+++ b/video-conference.html
@@ -13,7 +13,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">
         <meta name="author" content="Mohnish Pal">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -21,7 +20,7 @@
         <meta name="description" content="Video Conferencing." />
         <meta name="keywords" content="Video Conferencing" />
 
-        <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="https://www.webrtc-experiment.com/style.css">
 		<link rel="stylesheet" href="roomdailog.css">
         <link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css' rel="stylesheet"/>
       <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
@@ -118,7 +117,7 @@
                        <img src='http://www.netlegends.in/sh.png' style='width:40px'/>
 					</a>
                    </div>  
-                   <div class='col-md-6'>
+                   <div class='col-md-5'>
                         <h3 id="title" style='text-align:center; font-size:30px; color:white;'></h3>
                   </div>
 				  <div id="divjoin" class='col-md-1'>
