--- a/video-conference.html
+++ b/video-conference.html
@@ -20,8 +20,7 @@
         <meta name="description" content="Video Conferencing." />
         <meta name="keywords" content="Video Conferencing" />
 
-       <link rel="stylesheet" href="https://www.webrtc-experiment.com/style.css">
-		<link rel="stylesheet" href="roomdailog.css">
+        <link rel="stylesheet" href="style.css">
         <link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css' rel="stylesheet"/>
       <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
         <style>
