--- a/video-conference.html
+++ b/video-conference.html
@@ -109,20 +109,18 @@
 
     <body>
 
-       <div class='container' style='margin-bottom:10px'>
-           <div class='row'>    
-                   <div class='col-md-1'>
+       <div id='containertop' style='margin-bottom:10px'>
+                   <div id="leftThing">
 					<a href="#popup1">
                        <img src='http://www.netlegends.in/sh.png' style='width:40px'/>
 					</a>
                    </div>  
-                   <div class='col-md-5'>
+                   <div id="content">
                         <h3 id="title" style='text-align:center; font-size:30px; color:white;'></h3>
                   </div>
-				  <div id="divjoin" class='col-md-1'>
+				  <div id="divjoin" id="rightThing">
 						<table id="rooms-list"></table>
-                   </div>  			   
-           </div>
+                   </div> 
         </div>
 		
 		 <div class='col-md-12'>
