--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body{
-	background: linear-gradient(#212529 60%,#d8d8d8 0);
+	background: linear-gradient(#0205a1 60%,#d8d8d8 0);
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: "product_regular",Arial,sans-serif!important;
@@ -15,11 +15,11 @@ body{
  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
  <link href='page-style.css' rel="stylesheet"/>
 </head>
-<body>
+<body style="background: linear-gradient(#0205a1 60%,#d8d8d8 0);">
 <div class='container' style='margin-top:20%'>
     <div class="border-0 login-form-box bg-white px-5 py-5 col-lg-6 col-sm-12 col-md-9 col-xs-12">
       <div id='box1' >
-        <button onclick="showBox2();" class="btn btn-cc btn-orange-hover btn-lg btn-block mb-4" id="cc_login_btn">Create new meeting</button>
+        <button onclick="showBox2();" style="background:#0205a1" class="btn btn-cc btn-orange-hover btn-lg btn-block mb-4" id="cc_login_btn">Create new meeting</button>
         <button onclick="showBox3();"class="btn btn-cc btn-green-hover btn-lg btn-block btn-grey" id="cc_login_btn">Join existing meeting</button>
       </div>
       <div id='box2' class='hidden'>
@@ -30,7 +30,7 @@ body{
           <input required="" class="form-control form-control-lg" id="lroomname" name="name" placeholder="Enter your name" type="text" value="">
           </div>
           <div class="form-group">
-            <button class="btn btn-cc btn-orange-hover btn-lg btn-block mb-4" id="cc_login_btn" onclick="startmeetinng()">Start Meeting</button>
+            <button class="btn btn-cc btn-orange-hover btn-lg btn-block mb-4" id="cc_login_btn" style="background:#0205a1" onclick="startmeetinng()">Start Meeting</button>
             </div> 
       </div>
       <div id='box3' class='hidden'>
@@ -42,7 +42,7 @@ body{
         </div>
         <div class="form-group"><input required="" id="lmeetingid" class="form-control form-control-lg" placeholder="Meeting URL" type="text"></div>
         <div style="display: none;" class="form-group mb-0 mt-3"><input required="" class="form-control form-control-lg" placeholder="Enter code" type="password" maxlength="6"></div><div class="form-group mb-0 mt-3">
-          <button class="btn btn-cc btn-lg btn-block" id="cc_login_btn" onclick="joinmeeting()">Join meeting</button></div>
+          <button class="btn btn-cc btn-lg btn-block" style="background:#0205a1" id="cc_login_btn" onclick="joinmeeting()">Join meeting</button></div>
      </form>
      </div>
    </div>
